--- a/package.json
+++ b/package.json
@@ -23,16 +23,16 @@
     "Games-wabot",
     "wabot-aq"
   ],
-  "homepage": "https://github.com/BochilGaming/games-wabot",
+  "homepage": "https://github.com/DuoSince/Miku-Izayoi",
   "author": {
-    "name": "BochilGaming"
+    "name": "DevXyZ"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Nurutomo/wabot-aq.git"
+    "url": "git+https://github.com/DuoSince/Miku-Izayoi.git"
   },
   "bugs": {
-    "url": "https://github.com/BochilGaming/games-wabot/issues"
+    "url": "https://github.com/DuoSince/Miku-Izayoi.issues"
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
